--- a/embed.css
+++ b/embed.css
@@ -1,276 +1,262 @@
-#eventglo_wrapper {
-    margin-top: 20px;
-    padding-top: 30px;
-    font-family: 'Jost', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.eventglo-embed-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0px auto;
+  position: relative;
 }
-
-.events_wrapper {
-    display: flex;
-    flex-direction: row;
-    row-gap: 20px;
+.eventglo-embed {
+  line-height: 20px;
+  font-weight: 400;
+  font-size: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  min-height: 24em;
 }
-.s-cardtext {
-    font-family: 'Jost';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 10px;
-    line-height: 20px;
-    letter-spacing: 0.001em;
-    color: #515151;
-    position: relative;
+.eventglo-embed * {
+  box-sizing: border-box;
 }
-
-.s-cardtitle {
-    font-family: 'Jost';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 20px;
-    /* identical to box height, or 167% */
-
-    letter-spacing: 0.001em;
-
-    /* Colour/White Neutral/10 */
-
-    color: #303030;
+.eventglo-embed > * {
+  max-width: 100%;
+  padding: 0 0.75rem;
+  flex: 0 0 auto;
+  width: 100%;
+  margin-bottom: 1rem;
 }
-
-.card-title {
-    font-family: 'Jost';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 20px;
-    /* identical to box height, or 167% */
-
-    letter-spacing: 0.001em;
-
-    /* Colour/White Neutral/10 */
-
-    color: #303030;
+@media screen and (min-width: 576px) {
+  .eventglo-embed > * {
+    flex: 0 0 auto;
+    width: 50%;
+  }
 }
-
-.tag {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 6px 20px;
-    gap: 10px;
-    color: #ffffff;
-    position: absolute;
-    font-size: 12px;
-    font-weight: normal;
-    right: 0;
-    top: 1px;
-    background: #0E8D45;
+@media screen and (min-width: 768px) {
+  .eventglo-embed > * {
+    flex: 0 0 auto;
+    width: 33.3333%;
+  }
 }
-
-.card-text-title {
-    font-family: 'Jost';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 20px;
-    /* identical to box height, or 167% */
-
-    letter-spacing: 0.001em;
-
-    color: #000000;
-    margin-bottom: 10px;
+@media screen and (min-width: 1200px) {
+  .eventglo-embed > * {
+    flex: 0 0 auto;
+    width: 25%;
+  }
 }
-
-.outline-button-black {
-    margin: 1rem 0;
-    padding: .75rem 1rem;
-    color: #000000;
-    border: 1px solid #000000;
-    background-color: #ffffff;
-    border-radius: 30px;
-  
+.eventglo-embed .embed-card {
+  display: flex;
+  flex-direction: column;
+  background-clip: border-box;
+  word-wrap: break-ord;
+  font-family: Roboto, Verdana, sans-serif;
+  border: 0;
+  border-radius: 0;
+  box-shadow: 0px 2px 10px 0px #008cfe1a;
+  min-height: 24em;
+  position: relative;
+  width: 100%;
 }
-.outline-button-black:hover {
-  background-color: #000000;
+.eventglo-embed .embed-card * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.eventglo-embed .embed-card .card-body {
+  flex: 1 1 auto;
+  padding: 1rem;
+}
+.eventglo-embed .embed-card img {
+  max-width: 100%;
+}
+.eventglo-embed .embed-card .card-img-top,
+.eventglo-embed .embed-card .card-img-bottom,
+.eventglo-embed .embed-card .card-img {
+  border-radius: 0;
+}
+.eventglo-embed .embed-card .content-details {
+  max-width: 85%;
+}
+.eventglo-embed .embed-card > .card-title {
+  padding: 1rem;
+}
+.eventglo-embed .embed-card > .card-title,
+.eventglo-embed .embed-card > .card-title h1,
+.eventglo-embed .embed-card > .card-title p {
+  margin-bottom: 0;
+}
+.eventglo-embed .embed-card .content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.eventglo-embed .embed-card .content + .cta-embed-pane {
+  padding-top: 0.75rem;
+}
+.eventglo-embed .embed-card .content-title {
+  font-size: 1rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+}
+.eventglo-embed .embed-card .content-title,
+.eventglo-embed .content small {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+}
+.eventglo-embed .embed-card > .content-title {
+  padding: 1rem 1rem 0 1rem;
+}
+.eventglo-embed .embed-card .content-subtitle {
+  font-size: 0.8rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+.eventglo-embed .embed-card .content-details .content-label {
+  display: flex;
+  align-items: center;
+  max-width: 100%;
+  overflow: hidden;
+}
+.eventglo-embed .embed-card .content-details .content-label:not(:last-child) {
+  margin-bottom: 0.75rem;
+}
+.eventglo-embed .embed-card .content-details .content-label svg,
+.eventglo-embed .embed-card .content-details .content-label img {
+  width: 12px;
+  margin-right: 0.5rem;
+}
+.eventglo-embed .embed-card .content-details .content-label small {
+  font-size: 0.75rem;
+}
+.eventglo-embed .embed-card .content-date {
+  font-size: 1.5rem;
+  font-weight: 700;
+  align-self: center;
+}
+.eventglo-embed .embed-card .content-date p:first-child {
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+.eventglo-embed .embed-card .content-date * {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.eventglo-embed .embed-card .cta-embed-pane {
+  text-align: center;
+}
+.eventglo-embed .embed-card .cta-embed-pane .embed-cta-btn {
+  display: inline-block;
+  width: 100%;
+  max-width: 80%;
+  border: 1px solid var(--brand-color);
+  border-radius: 8px;
+  color: var(--brand-color);
+  background-color: #fff;
+  cursor: pointer;
+  padding: 0.35rem 0.75rem;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: transform 0.3s ease-in-out;
+}
+.eventglo-embed .embed-card .cta-embed-pane .embed-cta-btn:hover {
+  transform: translateY(-1px);
+}
+.eventglo-embed .embed-card .cta-embed-pane .embed-cta-btn span {
+  font-weight: 500;
+}
+.eventglo-embed .embed-card .content-image {
+  width: 8em;
+  max-width: 8em;
+  height: 10em;
+  margin-right: 0.5rem;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.eventglo-embed .embed-card .content-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+}
+.eventglo-embed .embed-card .two-line-overflow-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  min-height: calc(2rem + 5px);
+}
+.eventglo-embed .embed-card .card-body > .content-subtitle {
+  margin-bottom: 0.5rem;
+}
+.eventglo-embed .embed-card > .cta-embed-pane {
+  align-self: flex-end;
+  width: 100%;
+  padding: 0 1rem 1rem 1rem;
+}
+.eventglo-embed .embed-card .card-img-top,
+.eventglo-embed .embed-card .card-img-bottom,
+.eventglo-embed .embed-card .card-img {
+  border-radius: 0px !important;
+  height: 10em;
+  overflow: hidden;
+  max-width: 100%;
+}
+.eventglo-embed .embed-card .card-img-top img,
+.eventglo-embed .embed-card .card-img-bottom img,
+.eventglo-embed .embed-card .card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.eventglo-embed-container #eventglo-loader {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  z-index: 600;
+  display: none;
+}
+.eventglo-embed-container #eventglo-loader.show {
+  display: flex;
+}
+.eventglo-embed-container #eventglo-loader span {
+  display: inline-block;
+  font-family: Roboto, Verdana, san-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  color: #303030;
+}
+.eventglo-embed .tag {
   color: #ffffff;
+  position: absolute;
+  font-size: 12px;
+  font-weight: normal;
+  right: 0;
+  top: 1px;
+  display: inline-block;
+  padding: 2px 10px 2px 22px !important;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-color: red;
 }
-
-.s-date {
-    font-family: 'Jost';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 10px;
-    line-height: 20px;
-    /* identical to box height, or 200% */
-
-    letter-spacing: 0.001em;
-
-    /* Colour/White Neutral/10 */
-
-    color: #303030;
+.eventglo-embed .tag::before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  border: 1px sold #fff;
+  background-color: #fff;
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
 }
-
-.s-btn {
-    background-color: #D8DCFD;
-    color: #3209D7;
-    font-weight: 300;
-    font-size: 10px;
-    line-height: 20px;
-    width: 110px;
-    height: 32px;
-    border-radius: 8px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-}
-
-.s-card {
-    width: max-content;
-    height: auto;
-    /* // height: 252px; */
-
-    background: #FFFFFF;
-    /* bold shadow */
-
-    box-shadow: 0px 2px 10px rgba(0, 140, 254, 0.1);
-    border-radius: 12px;
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-.s-see {
-    margin-right: 15px; width: 45px; margin-top: 4px; font-family: 'Jost';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 20px;
-
-    /* Colour/White Neutral/10 */
-
-    color: #303030;
-}
-
-
-/* // .mat-mdc-tab .mdc-tab__content {
-//   position: relative;
-//   pointer-events: auto;
-//   font-family: 'Jost';
-//   font-size: 30px;
-// }
-
-// .mat-mdc-tab .mdc-tab__text-label {
-//   display: inline-flex;
-//   align-items: center;
-//   font-family: 'Jost';
-//   font-size: 30px;
-
-// } */
-
-.eventglo__input {
-    width: 100%;
-    padding: 10px 15px;
-    margin: 10px auto;
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
-.eventglo__submit-btn {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 11px 16px;
-    gap: 10px;
-    width: 100%;
-    width: 294px;
-    height: 40px;
-    color: #fff;
-    border: 1px solid #2907B0;
-    background: #2907B0;
-    border-radius: 4px;
-
-}
-.eventglo__submit-btn:hover {
-    color: #2907B0;
-    border: 1px solid #2907B0;
-    background: #ffffff;
-    transition: transform 0.3s ease;
-}
-
-
-.eventglo__modal {
-    display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .eventglo__modal-content {
-    border-radius: 20px;
-    padding: 20px 40px;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-  }
-  
-  /* The Close Button */
-  .eventglo__close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .eventglo__close:hover,
-  .eventglo__close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.item-card {
-    transition: 0.5s;
-    cursor: pointer;
-    border-radius: 19px;
-    min-height: 319px;
-    margin: .5rem;
-    width: 300px;
-  }
-  
-  .item-card-new {
-    /* // transition:0.5s; */
-    cursor: pointer;
-    border-radius: 10px;
-    width: 100%;
-    height: auto;
-    background: #F5F7FF;
-  }
-  
-  .item-card-add {
-    border-radius: 10px;
-    width: 400px;
-    height: auto;
-    background: #F5F7FF;
-  }
-  
-  .item-card-title {
-    font-size: 15px;
-    transition: 1s;
-    cursor: pointer;
-  }
-  
-  .item-card-title i {
-    font-size: 15px;
-    transition: 1s;
-    cursor: pointer;
-    color: #ffa710
-  }
-
